--- a/index.html
+++ b/index.html
@@ -7,19 +7,11 @@
 	<link href="assets/favicon.ico" rel="shortcut icon" />
 	<link rel="stylesheet" href="css/owfont-regular.css" />
 	<link rel="stylesheet" href="css/style.css" />
-	<title>momentum</title>
+	<title>Momentum</title>
 </head>
 
 <body>
 	<header class="header">
-		<div class="player">
-			<div class="player-controls">
-				<button class="play-prev player-icon"></button>
-				<button class="play player-icon"></button>
-				<button class="play-next player-icon"></button>
-			</div>
-			<ul class="play-list"></ul>
-		</div>
 		<div class="weather">
 			<div class="city" contenteditable="true">Minsk</div>
 			<i class="weather-icon owf"></i>
